examples/test/testpolicy843.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy843
  namespace: namespace364
spec:
  podSelector:
    matchLabels:
      key25: value20
      key34: value35
      key15: value7
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key39: value45
      podSelector:
        matchLabels:
          key23: value49
          key10: value38
          key46: value48
